ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-ingress-alb
 namespace: default
 annotations:
   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
   service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
   service.beta.kubernetes.io/aws-load-balancer-type: alb
spec:
   externalTrafficPolicy: Local
   type: LoadBalancer
   ports:
   - port: 80
     targetPort: 80
     protocol: TCP
     name: http
   - port: 443
     targetPort: 443
     protocol: TCP
     name: https
   selector:
     app: nanumsa-ingress
