ingress/socket-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nanumsa-socket-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    cert-manager.io/acme-challenge-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-set-headers: '{"X-Forwarded-Proto": "ws"}'
    nginx.ingress.kubernetes.io/upgrade: "websocket"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, DELETE, PATCH, PUT, OPTIONS
    # ws 설정용
    nginx.ingress.kubernetes.io/websocket-services: nanumsa-socket-server
    nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_token"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $remote_addr;
      proxy_pass_header Content-Type;
spec:
  ingressClassName: nginx
  tls: 
  - hosts: 
    - www.nanumsa.com
    secretName: tls-secret-socket-server
  rules:
  - host: www.nanumsa.com
    http:
      paths:
      - path: /socket/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nanumsa-socket-server
            port:
              number: 3000
